force-app/main/default/objects/Sale_Info__c/Sale_Info__c.object-meta.xml
<CustomObject>
    <label>Sale Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sale Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>