force-app/main/default/objects/Sale_Info__c/fields/BM_Expected__c.field-meta.xml
<CustomField>
    <fullName>BM_Expected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BM Expected</label>
    <length>20</length>
    <type>Text</type>
</CustomField>