force-app/main/default/objects/Sale_Info__c/fields/CYC_Grade__c.field-meta.xml
<CustomField>
    <fullName>CYC_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CYC Grade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>