force-app/main/default/objects/Sale_Info__c/fields/Deposit_Grade__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Deposit Grade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>