force-app/main/default/objects/Sale_Info__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Employee ID</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>