force-app/main/default/objects/Sale_Info__c/fields/HL_Grade__c.field-meta.xml
<CustomField>
    <fullName>HL_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>HL Grade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>