force-app/main/default/objects/Sale_Info__c/fields/Life_Grade__c.field-meta.xml
<CustomField>
    <fullName>Life_Grade__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Life Grade</label>
    <length>3</length>
    <type>Text</type>
</CustomField>