force-app/main/default/objects/Sale_Info__c/fields/Sale_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Sale_Hire_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sale Hire Date</label>
    <type>Date</type>
</CustomField>