force-app/main/default/objects/Sale_Info__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>