force-app/main/default/objects/Sale_Info__c/listViews/All_Sales_Info.listView-meta.xml
<ListView>
    <fullName>All_Sales_Info</fullName>
    <columns>NAME</columns>
    <columns>Employee_ID__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>Branch_Name__c</columns>
    <columns>Channel__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Sales Info</label>
</ListView>